Fix build issues: Add API V2 URL and temporarily disable duplicate translation check

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "memory": 2048
     }
   },
-  "buildCommand": "cd ../.. && yarn build",
+  "buildCommand": "turbo run build",
   "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "installCommand": "yarn install",
