refactor: move Google Places API calls to server-side for security

--- a/turbo.json
+++ b/turbo.json
@@ -317,6 +317,7 @@
     "GIPHY_API_KEY",
     "GITHUB_API_REPO_TOKEN",
     "GOOGLE_API_CREDENTIALS",
+    "GOOGLE_API_KEY",
     "GOOGLE_LOGIN_ENABLED",
     "GOOGLE_WEBHOOK_TOKEN",
     "HEROKU_APP_NAME",
