--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,7 @@
         "NEXT_PUBLIC_STRIPE_TEAM_MONTHLY_PRICE_ID",
         "NEXT_PUBLIC_WEBAPP_URL",
         "NEXT_PUBLIC_WEBSITE_URL",
-        "NEXT_PUBLIC_GOOGLE_API_KEY",
+        "GOOGLE_API_KEY",
         "SENTRY_DEBUG",
         "SENTRY_MAX_SPANS",
         "SENTRY_TRACES_SAMPLE_RATE",
